# haskell-faas-template

./: .gitignore  Dockerfile  README.md  TESTING.md  Vagrantfile  provisioner.sh  template.yml
app/: Main.hs
function/src/: Handler.hs
lib/: LICENSE  lib.cabal
lib/haskell-faas-lib/: handler.hs
src/: Server.hs
template/haskell-http/: .ghc.environment.x86_64-linux-8.6.5  Dockerfile  cabal.project  haskell-template.cabal
template/haskell-http/function/: haskell-template-function.cabal
template/haskell-http/function/src/: Handler.hs
template/haskell-http/function/test/: HandlerSpec.hs
template/haskell-http/src/: Server.hs
template/haskell-http/test/: ServerSpec.hs
test/: ServerSpec.hs
