cabal-version: 2.2

name: haskell-template
version: 0.1.0.0

common common
  build-depends:
      base >= 4.12,
      scotty >= 0.12
  default-language: Haskell2010
  ghc-options: -Wall

library
  import: common
  hs-source-dirs: src
  exposed-modules: Server
  build-depends:
    haskell-faas-lib,
    haskell-template-function,
    bytestring >= 0.10.12.0,
    text >= 1.2.4.1,
    http-types >= 0.12.3

executable haskell-template-server
  hs-source-dirs: app
  main-is: Main.hs
  build-depends:
    base >= 4.12,
    haskell-template

test-suite server-spec
  import: common
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Spec.hs
  other-modules:
      ServerSpec
  build-depends:
      hspec >= 2.7,
      hspec-wai,
      haskell-template
  build-tool-depends:
      hspec-discover:hspec-discover

